# countries-mcp-platform

./: .gitignore  README.md
countries-mcp-server/: README.md  main.py  pyproject.toml
local-countries-server/: package-lock.json  package.json  server.js
local-countries-server/data/: countries.js
local-countries-server/services/: countryService.js
