[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "countries-mcp-server"
version = "0.1.0"
description = "MCP server for countries data"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "httpx>=0.25.0"
]

[project.scripts]
countries-mcp-server = "countries_mcp_server:main"